unpackaged/main/default/objects/ComplianceRequest__c/ComplianceRequest__c.object-meta.xml
<CustomObject>
    <description>Case for tracking a security or legal review requested by a customer</description>
    <label>Compliance Request</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Compliance Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>