unpackaged/main/default/objects/ComplianceRequest__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The account this request relates to</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Compliance Requests</relationshipLabel>
    <relationshipName>InfoSec_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>