unpackaged/main/default/objects/ComplianceRequest__c/fields/Completion_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Completion_Deadline__c</fullName>
    <description>When does this ideally need to be resolved by</description>
    <label>Completion Deadline</label>
    <type>Date</type>
</CustomField>