unpackaged/main/default/objects/ComplianceRequest__c/fields/CustomerContact__c.field-meta.xml
<CustomField>
    <fullName>CustomerContact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The contact we should be reaching out to to resolve the case</description>
    <label>Customer Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Compliance Requests</relationshipLabel>
    <relationshipName>InfoSec_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>