unpackaged/main/default/objects/ComplianceRequest__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The opportunity this request relates to</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Compliance Requests</relationshipLabel>
    <relationshipName>InfoSec_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>