unpackaged/main/default/objects/ComplianceRequest__c/fields/Raised_By__c.field-meta.xml
<CustomField>
    <fullName>Raised_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Gearset employee who raised the request</description>
    <label>Raised By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>InfoSec_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>