unpackaged/main/default/objects/ComplianceRequest__c/fields/RequestDescription__c.field-meta.xml
<CustomField>
    <fullName>RequestDescription__c</fullName>
    <label>What is the request?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>