unpackaged/main/default/objects/ComplianceRequest__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Priority__c</columns>
    <columns>Completion_Deadline__c</columns>
    <columns>Type__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Raised_By__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>