unpackaged/main/default/objects/ComplianceRequest__c/listViews/Open.listView-meta.xml
<ListView>
    <fullName>Open</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Priority__c</columns>
    <columns>Completion_Deadline__c</columns>
    <columns>Type__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Raised_By__c</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Approved,Rejected</value>
    </filters>
    <label>Open</label>
</ListView>